--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Notes App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Notes App</title>
+  <link href="styles.css" rel="stylesheet">
+</head>
+
+<body class="bg-editor-bg text-text-primary overflow-hidden">
+  <div id="root"></div>
+</body>
+
 </html>
