--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Notes App</title>
-  <link href="styles.css" rel="stylesheet">
+  <link href="/dist/styles.css" rel="stylesheet">
 </head>
 
 <body class="bg-editor-bg text-text-primary overflow-hidden">
